--- a/GreenSphere2/Packages/manifest.json
+++ b/GreenSphere2/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.microsoft.altspacevr_uploader": "file:C:/Users/xrdes/Downloads/com.microsoft.altspacevr_uploader-2.2.29.tgz",
     "com.unity.collab-proxy": "1.9.0",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
